This is the NEWS file for ConfClerk. ConfClerk is the successor of
fosdem-schedule; cf. docs/fosdem-schedule for the historic documentation.

Version 0.5.3
//! TODO

Version 0.5.2, 2011-07-23
* Show close button in conference dialog also if there are no conferences
  yet.
* Show event title instead of id in alarm (maemo).
* Remove event/room records on import to get rid of "old" room names; this
  avoids duplicates when room names change.

Version 0.5.1
* Improve search function: split search string on whitespace.
* Various small UI changes, e.g.:
  - cancel button in settings dialogs
  - colors and borders
  - date format in date navigator
  - flatten menu
  - remove status bar
  - clean up some dialogs

Version 0.5.0
* First release of ConfClerk as the fosdem-schedule successor.
* Continue the multi-conference feature, make sure persons/tracks/rooms are
  handled separately per conference.
* Remove FOSDEM- and maemo-specific parts.
* Exchange icons to be sure about the provenance.
* Some code cleanup, most notable: use prepared statements for all SQL
  queries.