@@ -61,14 +61,31 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QToolButton" name="todayButton">
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../icons.qrc">
+         <normaloff>:/icons/today.png</normaloff>:/icons/today.png</iconset>
+       </property>
+       <property name="autoRaise">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../icons.qrc"/>
+ </resources>
  <connections/>
  <slots>
   <slot>prevDayButtonClicked()</slot>
   <slot>nextDayButtonClicked()</slot>
+  <slot>todayButtonClicked()</slot>
  </slots>
 </ui>
